[package]
name = "rust-otp"
version = "1.0.0"
authors = ["Tim Dumol <tim@timdumol.com>"]
description = "A Rust library for performing the HMAC-based One-Time Password (HOTP) and Time-based One-Time Password (TOTP) algorithms."
homepage = "https://github.com/WesleyBatista/rust-otp"
repository = "https://github.com/WesleyBatista/rust-otp"
readme = "README.md"
keywords = ["otp", "totp", "hotp"]
license = "MIT"
edition = "2018"

[lib]
name = "rust_otp"

[dependencies]
ascii = "1.1.0"
data-encoding = "2.5.0"
err-derive = "0.3.1"
ring = "0.17.7"
